--- a/maintenance.html
+++ b/maintenance.html
@@ -17,7 +17,7 @@
     <body>
         <nav class="navbar">
             <a href="index.html" class="flex"
-                ><img src="/images/logo.png" class="logo" />
+                ><img src="./images/logo.png" class="logo" />
                 <span class="website-name tracking-tight">Code Social</span></a
             >
 
@@ -45,7 +45,7 @@
                 <li class="community">
                     <a href="maintenance.html">Join Our Community</a>
                     <ul class="dropdown">
-                        <li><a href="maintenance.html">WhatsApp</a></li>
+                        <li><a href="maintenance.html">WhatsApp</a></li></br>
                         <li><a href="maintenance.html">Discord</a></li>
                     </ul>
                 </li>
@@ -65,7 +65,7 @@
                 <li>
                     <button id="theme-toggle" class="theme-toggle-btn">
                         <img
-                            src="/images/dark-mode.png"
+                            src="./images/dark-mode.png"
                             alt="theme-mode"
                             id="theme-toggle-icon"
                         />
