--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <!-- Logo and About Section -->
 
                     <div class="footer-logo-section footer-item my-5  ">
-                        <a href="index.html" class="flex w-full justify-center  "><img src="/images/logo.png" class="logo mx-auto">
+                        <a href="index.html" class="flex w-full justify-center  "><img src="./images/logo.png" class="logo mx-auto">
                             <span class="website-name tracking-tight ">Code Social</span></a>
 
                         <p class="footer-text">Code Social Community is a vibrant and inclusive space for tech enthusiasts to learn, grow, and connect. Founded in 2023, our mission is to empower individuals with resources, mentorship, and
