--- a/404.html
+++ b/404.html
@@ -65,9 +65,11 @@
                 <li>
                     <button id="theme-toggle" class="theme-toggle-btn">
                         <img
-                            src="/images/dark-mode.png"
+
+                            src="images/dark-mode.png"
                             alt="theme-mode"
                             id="theme-toggle-icon"
+                            
                         />
                     </button>
                     <!-- when light mode is active -> use "dark-mode.png" and when dark mode is active -> use "light-mode.png" -->
