--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar">
-        <a href="index.html" class="flex"><img src="/images/logo.png" class="logo">
+        <a href="index.html" class="flex"><img src="images/logo.png" class="logo">
             <span class="website-name tracking-tight ">Code Social</span></a>
 
 
@@ -71,7 +71,7 @@
             <!-- Dark Mode Toggle -->
             <li>
                 <button id="theme-toggle" class="theme-toggle-btn  ">
-                    <img src="/images/dark-mode.png" alt="theme-mode" id="theme-toggle-icon">
+                    <img src="images/dark-mode.png" alt="theme-mode" id="theme-toggle-icon">
                 </button>
                 <!-- when light mode is active -> use "dark-mode.png" and when dark mode is active -> use "light-mode.png" -->
             </li>
@@ -143,7 +143,9 @@
                     <!-- Logo and About Section -->
 
                     <div class="footer-logo-section footer-item my-5  ">
-                        <a href="index.html" class="flex w-full justify-center  "><img src="/images/logo.png" class="logo mx-auto">
+
+                        <a href="index.html" class="flex w-full justify-center  "><img src="images/logo.png" class="logo mx-auto">
+                            
                             <span class="website-name tracking-tight ">Code Social</span></a>
 
                         <p class="footer-text">Code Social Community is a vibrant and inclusive space for tech enthusiasts to learn, grow, and connect. Founded in 2023, our mission is to empower individuals with resources, mentorship, and
