--- a/maintenance.html
+++ b/maintenance.html
@@ -65,8 +65,10 @@
                 <li>
                     <button id="theme-toggle" class="theme-toggle-btn">
                         <img
-                            src="/images/dark-mode.png"
+                            src="images/dark-mode.png"
+
                             alt="theme-mode"
+                            
                             id="theme-toggle-icon"
                         />
                     </button>
