--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <script src="script.js" defer></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="images/logo copy.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">      
 </head>
 
 <body>
+    <!--this one in scroll button-->
+    <button id="scrollTopBtn" class="scroll-top-btn">
+        <i class="fas fa-arrow-up"></i> 
+    </button>
 
     <nav class="navbar">
         <a href="index.html" class="flex"><img src="images/logo.png" class="logo">
