added the blog section successfully

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 
                 </ul>
             </li>
+         <!-- blog section -->
+            <ul class="navbar-links flex  ">
+            <li class="ml-20">
+                <a href="blog.html">Blogs</a>
+                <ul class="dropdown  ">
+                    <li><a href="blog.html"></a></li>
+
+                </ul>
+            </li>
             <li class="community">
                 <a href="maintenance.html">Join Our Community</a>
                 <ul class="dropdown">
@@ -175,6 +184,7 @@
                         <ul class="footer-list">
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Events</a></li>
+                            <li><a href="blog.html">Blog</a></li>
                             <li><a href="#">Community Guidelines</a></li>
                             <li><a href="#">Careers</a></li>
                         </ul>
@@ -185,6 +195,7 @@
                         <p class="footer-title">Help</p>
                         <ul class="footer-list">
                             <li><a href="#">Contact Us</a></li>
+                            <li><a href="blog.html">blog</a></li>
                             <li><a href="#">Volunteer Opportunities</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
