fixed the error in blogs

--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 
         <!-- Blog Card 4 -->
         <div class="blog-card">
-          <img src="assets/blog-3.jpg" alt="Tips for Efficient Coding" />
+          <img src="images/b4.jpeg" alt="Tips for Efficient Coding" />
           <h4>Efficient Coding Techniques</h4>
           <p>Maximize your coding efficiency with these tips...</p>
           <button class="read-more" data-id="4">Read More</button>
