--- a/volunteering-oppurtunities/volunteer-opp-page.html
+++ b/volunteering-oppurtunities/volunteer-opp-page.html
@@ -286,5 +286,17 @@
 
     <script src="../script.js"></script>
     <script src="./vol-effects.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "j2Uy2CrJfZueGX7wNtJT_",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="j2Uy2CrJfZueGX7wNtJT_"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 </html>
