--- a/index.html
+++ b/index.html
@@ -282,6 +282,18 @@ document.getElementById('add-event').addEventListener('click', () => {
 document.addEventListener('DOMContentLoaded', generateCalendar);
 
         </script>
+        <script>
+            window.embeddedChatbotConfig = {
+            chatbotId: "j2Uy2CrJfZueGX7wNtJT_",
+            domain: "www.chatbase.co"
+            }
+            </script>
+            <script
+            src="https://www.chatbase.co/embed.min.js"
+            chatbotId="j2Uy2CrJfZueGX7wNtJT_"
+            domain="www.chatbase.co"
+            defer>
+            </script>
 </body>
 
 </html>
