--- a/mentorship.html
+++ b/mentorship.html
@@ -130,6 +130,17 @@
       <!-- Add more mentor cards as needed -->
     </div>
   </div>
-
+  <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "j2Uy2CrJfZueGX7wNtJT_",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="j2Uy2CrJfZueGX7wNtJT_"
+    domain="www.chatbase.co"
+    defer>
+    </script>
 </body>
 </html>
