--- a/maintenance.html
+++ b/maintenance.html
@@ -17,7 +17,7 @@
     <body>
         <nav class="navbar">
             <a href="index.html" class="flex"
-                ><img src="/images/logo.png" class="logo" />
+                ><img src="images/logo.png" class="logo" />
                 <span class="website-name tracking-tight">Code Social</span></a
             >
 
