--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code-social</p>
             </div>
         </section>
-
+    </footer>
 
 
         <script>
